ajustes finos - nome e avatar (iniciais) do gerente refletindo o gerente-logado - simulando sempre o gerenteId como o logado por enquanto

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -41,10 +41,10 @@
     </a>
   </nav>
   <div class="user">
-    <div class="avatar">JD</div>
+    <div class="avatar">{{ gerenteAvatar }}</div>
     <div>
-      <div class="name">John Doe</div>
-      <div class="role">Manager</div>
+      <div class="name">{{ gerenteNome }}</div>
+      <div class="role">Gerente</div>
     </div>
   </div>
 </aside>
