ajustando listagem para mostrar ou não botão 'fechar' e botão 'NOVO' - e criando campos para a função 'criar nova tarefa' a partir da page TAREFAS

--- a/src/app/pages/clientes/clientes.component.html
+++ b/src/app/pages/clientes/clientes.component.html
@@ -2,6 +2,7 @@
   <app-sidebar *ngIf="sidebarOpen()" [gerenteNome]="gerenteStore.nome()" [gerenteAvatar]="gerenteStore.avatar()"></app-sidebar>
   <section class="content">
     <app-paginated-table
+      [btnClose]="false"
       title="Clientes da Carteira"
       subtitle="Clientes associados ao gerente"
       [rows]="contas()"
